Bug 51195 - : LibreOffice can not save fontwork as docx
Summary: : LibreOffice can not save fontwork as docx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:6.4.0 target:7.6.0
Keywords: filter:docx
: 65602 66187 (view as bug list)
Depends on:
Blocks: DOCX FontWork-WordArt
  Show dependency treegraph
 
Reported: 2012-06-18 02:09 UTC by Snow Leopard
Modified: 2023-03-09 10:45 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
The same file before saving and after saving. (904.46 KB, image/jpeg)
2012-06-18 02:09 UTC, Snow Leopard
Details
My results (111.07 KB, application/x-zip-compressed)
2013-04-06 13:39 UTC, Florian Reisinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Snow Leopard 2012-06-18 02:09:48 UTC
Created attachment 63164 [details]
The same file before saving and after saving.

Problem description: 
LibreOffice writer can not save fontwork as .docx
but it can save it as .odt

Platform (if different from the browser): Windows 8, ubuntu 12.

I've attached a picture of the problem.

thanks :)
Comment 1 bfoman (inactive) 2012-06-20 03:28:32 UTC
Confirmed with:
LO 3.5.4.2 
Build ID: own W7 debug build
Windows 7 Professional SP1 64 bit

Fontwork in .docx is not supported. File can be saved as .doc.
Comment 2 Adolfo Jayme Barrientos 2012-07-21 23:59:41 UTC
(In reply to comment #1)
> Fontwork in .docx is not supported. File can be saved as .doc.

In such case LibreOffice should at least warn the user.
Comment 3 Florian Reisinger 2013-04-06 13:38:40 UTC
bfoman is right (Tested with latest master)
1.pdf : Before saving
2.pdf : Opened in MS Word 2010
3.png : With a new user profile
4.pdf : Open the previously saved file in LibO Version: 4.1.0.0.alpha0+
Build ID: 61d1f8f237bb45901de9c8016ea48fab1c3570d
So -> Enhancement (I am going to attach a .zip file)
Comment 4 Florian Reisinger 2013-04-06 13:39:19 UTC
Created attachment 77523 [details]
My results
Comment 5 Jorendc 2013-06-27 19:37:26 UTC
*** Bug 66187 has been marked as a duplicate of this bug. ***
Comment 6 Jorendc 2013-06-27 20:22:15 UTC
*** Bug 65602 has been marked as a duplicate of this bug. ***
Comment 7 A (Andy) 2015-12-27 18:26:17 UTC
Reproducible with LO 5.1.0.1, Win 8.1
Comment 8 joan 2017-12-11 09:13:21 UTC
Still happening on latest version 5.3.7.2.Windows 10 Home.
Fontwork disappears on re-opening a Writer document which has been saved as a .DOCX format, it works okay with .DOC.
This is not ideal, I encourage lots of people to use LibreOffice and always set their defaults to .DOCX in order to maintain compatibility with anybody else they communicate with.
Would be very good if this could get itself fixed!
Comment 9 Regina Henschel 2019-06-15 13:59:16 UTC
The problem is complex. I have collected some remarks on https://wiki.documentfoundation.org/Development/Remarks_on_Fontwork_and_TextWarp

As a first step, I propose to convert LibreOffice Fontwork to MS Office TextWarp. This will not preserve the filling and outline. But MS Office will show the text in the current character style, which will be black font color as default. The current character style is hidden in LibreOffice Fontwork and only visible in edit mode of the Fontwork text. That proposal is in https://gerrit.libreoffice.org/#/c/74057/ for review.

There would be more to do: Import of TextWarp in docx-documents (bug 125884) and the import and export of character fill and outline (bug 119221).
Comment 10 Commit Notification 2019-06-17 16:49:22 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2be2c914ed48823304c2e95a836ee93a08853628%5E%21

tdf#51195, tdf#100348 Convert Fontwork to TextWarp on export

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Regina Henschel 2019-08-05 13:37:23 UTC
I have not set this to "fixed", because loading a fontwork in docx is still missing.
Comment 12 Stéphane Guillou (stragu) 2021-06-28 13:40:15 UTC
Confirming that the fontwork saved in a .docx isn't displayed when the file is re-opened.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: f446a203fa2897bab8ae7686c948a8bf060675c6
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-06-24_15:16:38
Calc: threaded
Comment 13 Regina Henschel 2023-01-19 14:20:12 UTC
An import of shapes made with "abc transform" in Word is implemented in the meantime, see bug 124884.

The export of Fontwork shapes has still a lot of problems. Some of them cannot be solved (e.g. Fontwork shape in frame) because the file formats are incompatible in some aspects.
Comment 14 Commit Notification 2023-02-22 07:12:44 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b94336ac3d29180504e4bd7ada4d29ed5b6d3fda

tdf#51195 Improve DML export of Fontwork shapes for docx

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Regina Henschel 2023-02-22 13:44:03 UTC
Export of Fontwork shapes with solid fill or with bitmap fill should work now. Export of gradient fill is still missing.
Comment 16 Commit Notification 2023-03-09 08:26:02 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d95a09c1fca70d658207b8c48761af32dd2df213

tdf#51195 add docx export of gradient fill of Fontwork shapes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Regina Henschel 2023-03-09 10:45:47 UTC
It should work in generally now. If you see still problems, please write a new bug report. But please keep in mind that gradients in LibreOffice and Word are not compatible in many ways.