tdf#51195, tdf#100348 Convert Fontwork to TextWarp on export

LibreOffice has Fontwork as property text-path in enhanced-custom-
geometry. OOXML has the similar TextWarp as property of a textbox. The
patch converts the custom shape to a textbox and sets the attribute
prstTxWarp. Fill and outline of the Fontwork is lost. The import and
export of fill and outline is tracked in tdf#119221 and still needs
to be fixed.

Change-Id: I8ea7b305d7d0a8367d61c1789f22b56d274a311d
Reviewed-on: https://gerrit.libreoffice.org/74057
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>